src/test/deca/context/valid/Class6.deca
// Description:
//    Definition de class + plusieurs manipulations avec class
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022

class A{
    float a;
}

{
    A FIRST=new A();
    FIRST.a=5.5;

}