src/test/deca/context/invalid/class26.deca
class A{
    int a;
    float a;
    
} 
{
    A a=new A();
    
}